--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "blog/content management system",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,8 +15,14 @@
     "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.5",
+    "@grpc/proto-loader": "^0.7.10",
+    "bcrypt": "^5.1.1",
+    "http-status": "^1.7.0",
     "mysql2": "^3.6.1",
+    "path": "^0.12.7",
     "sequelize": "^6.33.0",
+    "url": "^0.11.3",
     "uuid": "^9.0.1"
   }
 }
