--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Kritan And Bibek",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.51.0",
@@ -18,7 +18,11 @@
     "@grpc/grpc-js": "^1.9.5",
     "@grpc/proto-loader": "^0.7.10",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "http-status": "^1.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "path": "^0.12.7",
     "sequelize": "^6.33.0",
