--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "blog/content management system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.51.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.5",
+    "@grpc/proto-loader": "^0.7.10",
+    "lodash": "^4.17.21",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0",
     "uuid": "^9.0.1"
