--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "cms",
-  "version": "1.0.0",
-  "description": "blog/content management system",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
-  },
-  "type": "module",
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.51.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "sequelize-cli": "^6.6.1"
-  },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.9.5",
-    "@grpc/proto-loader": "^0.7.10",
-    "lodash": "^4.17.21",
-    "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0",
-    "uuid": "^9.0.1"
-  }
+	"name": "cms",
+	"version": "1.0.0",
+	"description": "blog/content management system",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"gateway": "nodemon gateway/index",
+		"server": "nodemon server/index"
+	},
+	"type": "module",
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"eslint": "^8.51.0",
+		"nodemon": "^3.0.1",
+		"prettier": "^3.0.3",
+		"sequelize-cli": "^6.6.1"
+	},
+	"dependencies": {
+		"@grpc/grpc-js": "^1.9.5",
+		"@grpc/proto-loader": "^0.7.10",
+		"express": "^4.18.2",
+		"lodash": "^4.17.21",
+		"morgan": "^1.10.0",
+		"mysql2": "^3.6.1",
+		"sequelize": "^6.33.0",
+		"uuid": "^9.0.1"
+	}
 }
