--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,27 @@
 {
-	"name": "cms",
+	"name": "server",
 	"version": "1.0.0",
-	"description": "blog/content management system",
+	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"gateway": "nodemon gateway/index",
-		"server": "nodemon server/index"
+		"start": "node index"
 	},
 	"type": "module",
+	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
-		"eslint": "^8.51.0",
-		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3",
-		"sequelize-cli": "^6.6.1"
-	},
 	"dependencies": {
 		"@grpc/grpc-js": "^1.9.5",
 		"@grpc/proto-loader": "^0.7.10",
-		"express": "^4.18.2",
+		"dotenv": "^16.3.1",
 		"lodash": "^4.17.21",
 		"morgan": "^1.10.0",
 		"mysql2": "^3.6.1",
 		"sequelize": "^6.33.0",
 		"uuid": "^9.0.1"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
 	}
 }
