--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,8 +1,10 @@
+// .sequelizerc
+
 const path = require('path');
 
 module.exports = {
-    'config': path.resolve('server/db', 'database.json'),
-    'models-path': path.resolve('server/db', 'models'),
-    'seeders-path': path.resolve('server/db', 'seeders'),
-    'migrations-path': path.resolve('server/db', 'migrations')
+  'config': path.resolve('db', 'database.json'),
+  'models-path': path.resolve('db', 'models'),
+  'seeders-path': path.resolve('db', 'seeders'),
+  'migrations-path': path.resolve('db', 'migrations')
 };
