--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index"
+		"start": "NODE_ENV=development node server",
+		"start-prod": "NODE_ENV=production node server"
 	},
 	"type": "module",
 	"keywords": [],
@@ -19,6 +20,7 @@
 		"morgan": "^1.10.0",
 		"mysql2": "^3.6.1",
 		"sequelize": "^6.33.0",
+		"sequelize-cli": "6.6.1",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
